# AI-Assistant

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  faq_sample_data.json  pyproject.toml  run.py  sonar-project.properties
.github/workflows/: cd-production-deployment.yml  cd-staging-deployment.yml  ci-caching.yml  ci-production-build-push.yml  ci-staging-build-push.yml  main.yml
app/: __init__.py  logging_config.py  main.py  routes.py  socket_manager.py  summarizer.py
app/Galaxy_integration/: galaxy.py  galaxy_content_clean.py
app/annotation_graph/: annotated_graph.py  json_to_cypher.py  neo4j_handler.py  schema_handler.py
app/annotation_graph/schema/fly/: fly_biocypher_config.yaml  fly_enhanced_schema.txt
app/annotation_graph/schema/human/: biocypher_config.yaml  enhanced_schema.txt
app/biogpt_agent/: biogpt.py
app/hypothesis_generation/: hypothesis.py
app/hypothesis_generation/api/: hypothesis_api.py
app/lib/: auth.py
app/llm_handle/: llm_models.py
app/prompts/: annotation_prompts.py  classifier_prompt.py  conversation_handler.py  hypothesis_prompt.py  rag_prompts.py
app/rag/: literature.py  rag.py
app/rag/utils/: content_analyzer.py  content_processor.py  llm_wrapper.py  pdf_analyzer.py  pdf_processor.py  tts_utils.py  web_search.py
app/storage/: history.py  history_manager.py  memory_layer.py  mongo_storage.py  qdrant.py  redis.py  sql_redis_storage.py  sql_storage.py
config/: config.yaml  new_enhanced_schema.txt  new_preprocessed_schema.txt  preprossed_schema.txt
tests/: test_response.py
