[tool.poetry]
name = "ai-assistant"
version = "0.0.1"
description = ""
authors = []
readme = "README.md"
packages = [
  { include = "app"}
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
Flask = "^3.0.3"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
openai = "^1.51.0"
PyYAML = "^6.0.2"
pandas = "^2.2.3"
neo4j = "^4.4"
biocypher = "^0.6.1"
scikit-learn = "^1.5.2"
qdrant-client = "^1.12.0"
tiktoken = "^0.8.0"
google-generativeai = "^0.8.3"
pyjwt = "^2.10.0"
flask-limiter = "^3.8.0"
gunicorn = "^23.0.0"
pytest = "^8.3.4"
flask-cors = "^5.0.0"
sqlalchemy = "^2.0.41"
redis = "^6.2.0"
flask-socketio = "^5.5.1"
eventlet = "^0.40.1"
websocket-client = "^1.8.0"
langgraph = "^0.6.0"
pymupdf = "^1.26.1"
pymupdf4llm = "^0.0.25"
langchain = "^0.3.27"
langchain-text-splitters = "^0.3.9"
pyt2s = "^0.0.4"
langchain-core = "^0.3.72"
torch = {version = "^2.7.1", source = "pytorch-cpu"}
sentence-transformers = "^5.0.0"
trafilatura = "^2.0.0"
beautifulsoup4 = "^4.13.4"
urllib3 = "^2.5.0"
pymongo = "^4.13.2"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"